--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -176,7 +176,7 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE TENA
 1. 查询 `V$OB_PLAN_CACHE_PLAN_STAT` 视图获取 SQL 在计划缓存中的 `plan_id`。
 
    ```shell
-   obclient> SELECT * FROM V$OB_PLAN_CACHE_PLAN_STAT WHERE tenant_id= 1001 AND STATEMENT LIKE 'INSERT INTO T1 VALUES%'\G
+   obclient> SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_STAT WHERE tenant_id= 1001 AND STATEMENT LIKE 'INSERT INTO T1 VALUES%'\G
    ***************************1. row ***************************
                TENANT_ID: 1001
                   SVR_IP: xxx.xxx.xxx.xxx
@@ -246,7 +246,7 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE TENA
    </main>
 
     ```shell
-    obclient> SELECT * FROM V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE tenant_id = 1001 AND plan_id = 9228;                        
+    obclient> SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE tenant_id = 1001 AND plan_id = 9228;                        
    +-----------+----------------+----------+---------+------------+--------------+------------------+------+------+------+----------+
    | TENANT_ID | SVR_IP         | SVR_PORT | PLAN_ID | PLAN_DEPTH | PLAN_LINE_ID | OPERATOR         | NAME | ROWS | COST | PROPERTY |
    +-----------+----------------+----------+---------+------------+--------------+------------------+------+------+------+----------+
