--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -4,7 +4,7 @@ OBProxy 部署成功后，可以通过命令启动单个 obproxy 进程。
 
 ## 前提条件
 
-请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/3.deploy-obproxy-command-line.md)。
+请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md)。
 
 ## 背景信息
 
@@ -18,19 +18,19 @@ OBProxy 部署成功后，可以通过命令启动单个 obproxy 进程。
 
 1. 使用 admin 用户登录到待启动的 OBProxy 所在的机器。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>启动 OBProxy 时，请使用 admin 用户登录并在 OBProxy 软件的 home 目录下执行启动命令。使用其他用户或者在其他目录下启动 OBProxy 都可能带来问题。</p>
-  </main>
+   <main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>启动 OBProxy 时，请使用 admin 用户登录并在 OBProxy 软件的 home 目录下执行启动命令。使用其他用户或者在其他目录下启动 OBProxy 都可能带来问题。</p>
+   </main>
 
 2. 进入 OBProxy 的安装目录。
 
 3. 执行以下命令，启动 OBProxy。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>在启动 OBProxy 前，您可以通过 <code>./bin/obproxy -h</code> 命令来查看 OBProxy 启动相关的参数。</p>
-  </main>
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>在启动 OBProxy 前，您可以通过 <code>./bin/obproxy -h</code> 命令来查看 OBProxy 启动相关的参数。</p>
+   </main>
 
    * 在启动命令中指定 `-r` 参数
 
