--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/2.obproxy-cluster-parameter-management.md
@@ -2,21 +2,35 @@
 
 本文介绍如何通过 OCP，在 OBProxy 集群的参数管理页面查看 **参数列表** 和 **修改历史**。
 
-## 查看参数列表
+## 查看或修改参数
 
 1. 登录 OCP。
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **参数管理** 页面的 **参数列表** 页签。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群的 **概览** 页面。
 
-   您可在 **参数列表** 页签搜索参数名，查看指定的参数信息；也可以直接在列表中查看 **参数名**、**值**、**说明**、**是否重启生效** 等信息，并对参数进行修改操作。
+4. 单击左侧导航栏的 **参数管理** ，默认进入 **参数列表** 页签。
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200028.png)
+   ![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/403-cn/obproxy%E5%8F%82%E6%95%B0%E7%AE%A1%E7%90%86.png)
 
-   单击 **操作** 列的 **修改值**，在弹出框中填入新的值，并单击 **确定**，完成修改。
+   在该页面中，您可以进行如下操作：
 
-   有关 OBProxy 集群参数的详细介绍，请参见 [配置参数](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784)。
+   * 查看参数
+
+     在搜索框中输入参数名，单击搜索按钮，可以查看指定的参数信息，支持模糊查询。
+
+   * 修改参数
+
+     1. 单击指定参数 **操作** 列的 **修改值** 按钮。
+     2. 填写 **值** ，随后单击 **确定** 。
+     3. 目标参数的值修改完毕后，单击 **提交修改**。
+     4. 在弹出的面板中确认修改信息，单击 **确认修改**。等待修改任务执行完成，则修改成功。
+
+        参数修改完成后，可以查看参数的 **是否重启生效** 信息，以确定参数如何生效：
+
+        * 无需重启生效的参数：表示参数修改成功后约 3 分钟即可生效。
+        * 需要重启生效的参数：表示需重启 OBProxy 后才可生效。
 
 ## 查看修改历史
 
@@ -24,8 +38,12 @@
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **参数管理** 页面的 **修改历史** 页签。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群的 **概览** 页面。
 
-   在 **修改历史** 页签中，您可在 **修改日期**、**参数名称**、**操作用户** 中输入相应信息，单击 **查询**，对参数进行筛选。参数列表中可以查看 **参数名**、**值-变更前**（变更前的参数值）、**值-变更后**（变更后的参数值）、**修改时间** 和 **操作用户** 等信息。
+4. 单击左侧导航栏的 **参数管理** ，默认进入 **参数列表** 页签。
 
-   ![015](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0082988061/p201535.png)
+5. 选择 **修改历史** 页签。
+
+   在 **修改历史** 页签中，您可在 **修改日期**、**参数名称** 中输入相应信息，单击 **查询**，对参数进行筛选。参数列表中可以查看 **参数名**、**值-变更前**（变更前的参数值）、**值-变更后**（变更后的参数值）、**修改时间** 和 **操作用户** 等信息。
+
+   ![015](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/403-cn/%E5%8F%82%E6%95%B0%E4%BF%AE%E6%94%B9%E5%8E%86%E5%8F%B2.png)
