--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
@@ -14,10 +14,14 @@
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **概览** 页面。
 
-4. 单击 **删除集群**。
+4. 在页面右上角，单击 **...** 图标，选择 **删除集群**。
 
-   ![09162145](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0863922361/p327470.png)
+   ![delete-cluster](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/delete-odp-cluster.png)
 
 5. 在弹出框中单击 **删除**，完成删除 OBProxy 集群的操作。
+
+   您可通过弹出框中的 **查看任务** 按钮，查看进度。
+
+   当该任务状态为 **完成** ，且 OBProxy 页的 **集群列表** 中已无该 OBPorxy 集群时，则表示删除成功。
