--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
@@ -8,30 +8,30 @@
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **概览** 页面。
 
-4. 单击 **全部升级**。
+4. 在页面右上角，单击 **...** 图标，选择 **全部升级**。
 
-   ![09162144](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p327469.png)
+   ![update-cluster](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/delete-odp-cluster.png)
 
 5. 在弹出框中选择升级版本。
 
-   ![08161435](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p304959.png)
+   ![08161435](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%8D%87%E7%BA%A7obproxy1.png)
 
-  <main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>说明</h4>
     <ul>
     <li>
     <p>仅可选择高于当前最高版本的软件包。</p>
     </li>
     <li>
-    <p>仅可选择匹配当前主机硬件架构的软件包。</p>
+    <p>对存在多个 CPU 架构的 OBProxy 集群进行升级时，若某个 <b>CPU 架构</b> 中缺少所选择的安装包版本时，将无法进行升级。</p>
     </li>
     </ul>
-  </main>
+   </main>
 
 6. 单击 **确定**。
 
-   弹出如下对话框，可单击 **查看任务** 查看详细进展。 **任务状态** 显示为 **完成**，即表示升级成功。
+   您可通过弹出框中的 **查看任务** 按钮，查看升级进度。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5746081461/p352533.png)
+   当该任务状态为 **完成**，且集群 **概览** 页的 **OBProxy 列表** 中各 OBProxy 的状态为 **运行中** 时，则表示升级成功。
