--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
@@ -1,42 +1,41 @@
-# 管理 OBProxy 连接的 OB 集群
+# 管理 OBProxy 连接的 OceanBase 集群
 
 本文介绍如何通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。
 
-## 添加可连接的 OB 集群
+## 添加可连接的 OceanBase 集群
 
 1. 登录 OCP。
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群总览页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群的 **概览** 页面。
 
-4. 单击 **添加可连接的 OB 集群**。
+4. 在页面右上角，单击 **添加可连接的 OB 集群**。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3640360261/p271529.png)
+5. 在右侧弹出框中，选择可连接的 OceanBase 集群。
 
-5. 在右侧弹出框中选择可连接的 OB 集群。
+   OceanBase 集群的 Proxyro 的密码与 OBProxy 集群的 Proxyro 密码保持一致时，Proxyro 才可访问对应的 OceanBase 集群。当有 OceanBase 集群无法通过 Proxyro 账号的密码连接时，您可通过以下两种方式进行解决：
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6589360261/p271754.png)
+   * 修改 OBProxy 集群的 Proxyro 密码，详细操作请参见 [修改 Proxyro 账号的密码](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002099346)。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>当 OCP 密码箱中不存在该集群 proxyro 用户的连接凭证时，请单击 <strong>新建连接</strong>，为该集群的 proxyro 用户创建连接凭证。具体操作请参见对应版本的 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775977">新建连接</a>。</p>
-  </main>
+   * 修改 OceanBase 集群的 proxyro 用户密码，详细操作请参见 [MySQL 租户用户管理](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002100871)。
+
+   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B7%BB%E5%8A%A0%E5%8F%AF%E8%BF%9E%E6%8E%A5ob%E9%9B%86%E7%BE%A41.png)
 
 6. 单击 **确定**，完成添加。
 
-## 删除已连接的 OB 集群
+## 删除已连接的 OceanBase 集群
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>删除 OBProxy 集群下已连接的 OB 集群会使当前 OBProxy 集群下的 OBProxy 无法访问该 OB 集群，删除前请确认 OB 集群已不再使用。</p>
-  </main>
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>删除 OBProxy 集群下已连接的 OceanBase 集群会使当前 OBProxy 集群下的 OBProxy 无法访问该 OB 集群，删除前请确认 OB 集群已不再使用。</p>
+</main>
 
 1. 登录 OCP。
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **概览** 页面。
 
 4. 在 **可连接 OB 集群** 区域，单击对应集群后的 **删除**。
 
