--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/7.performance-monitoring-of-obproxy-cluster.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/2.manage-obproxy-clusters/7.performance-monitoring-of-obproxy-cluster.md
@@ -10,29 +10,23 @@
 
 3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **性能监控** 页面的 **服务监控** 页签。
 
-   * 在 **服务监控** 页签，您查看可选择 **分钟** 或 **10秒** 级别的 **统计区间**，选择 **近 30 分钟**、**近 1 小时** 或 **自定义时间**。
+   * 在 **服务监控** 页签，您可以查看 **近 5 分钟**、**近 10 分钟**、**近 20 分钟**、**近 30 分钟**、**近 1 小时**、**近 3 小时**、**近 6 小时**、**近 12 小时**或 **自定义时间** 内的监控数据。
 
-     ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2188808461/p200019.png)
+     ![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/performance-aoto-refresh.png)
 
-   * 单击 **实时** 按钮，可查看实时数据更新。
+   * 单击 **自动刷新** 按钮，系统将每 10 秒进行一次数据更新。
 
-      ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2188808461/p200020.png)
+4. 在 **总览** 区域，可以查看当前 OBProxy 集群的性能监控情况，单击右上方 **查看全部**，查看 **每秒事务数**、**每秒请求数**、**客户端连接数**、**服务端链接数**、**平均每条 SQL 响应时间**、**平均每秒路由表查询次数** 和 **平均每次网络请求或响应字节数** 的信息。
 
-4. 在 **总览** 区域，可以查看当前 OBProxy 集群的性能监控情况，单击右上方 **查看全部**，查看 **每秒事务数**、**请求数**、**客户端连接数**、**服务端链接数**、**SQL 处理耗时**、**每秒 ERROR 响应包数**、**路由表** 和 **网络请求字节数** 的信息。
+   ![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E6%80%BB%E8%A7%881.png)
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200021.png)
+5. 在 **连接的 OceanBase 集群数据** 区域，查看当前 OBProxy 集群与其代理的 OceanBase 集群之间的交互性能情况。
 
-5. 在 **连接的 OB 集群数据** 区域，查看当前 OBProxy 集群与其代理的 OceanBase 集群之间的交互性能情况。
-
-   您可查看各指标的最大值、最小值和平均值，单击列管理选择需要显示的指标信息。列信息包括：**每秒事务数**、**请求数**、**客户端连接数**、**服务端连接数**、**SQL 处理耗时**、**每秒 ERROR 响应包数**、**路由表** 和 **网络请求字节数** 信息。
-
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200022.png)
+   您可查看各指标的最大值、最小值和平均值，单击 **列管理** 选择需要显示的指标信息。
 
 6. 在 **OBProxy IP 数据** 区域，查看当前 OBProxy 集群中的各 OBProxy 节点的性能情况。
 
-   您可查看各指标的最大值、最小值和平均值，单击列管理选择需要显示的指标信息。列信息包括：**每秒事务数**、**请求数**、**客户端连接数**、**服务端连接数**、**SQL 处理耗时**、**每秒 ERROR 响应包数**、**路由表** 和 **网络请求字节数** 信息。
-
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2188808461/p200023.png)
+   您可查看各指标的最大值、最小值和平均值，单击 **列管理** 选择需要显示的指标信息。
 
 ## 系统监控
 
@@ -42,18 +36,16 @@
 
 3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **性能监控** 页面的 **系统监控** 页签。
 
-   在 **系统监控** 页签，您查看可选择 **分钟** 或 **10秒** 级别的 **统计区间**，选择 **近 30 分钟**、**近 1 小时** 或 **自定义时间**。
+   在 **系统监控** 页签，您可以查看 **近 5 分钟**、**近 10 分钟**、**近 20 分钟**、**近 30 分钟**、**近 1 小时**、**近 3 小时**、**近 6 小时**、**近 12 小时**或 **自定义时间** 内的监控数据。
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2188808461/p200024.png)
+   ![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/performance-aoto-refresh.png)
 
-   也可以单击 **实时** 按钮，查看实时数据更新。
+   也可以单击 **自动刷新** 按钮，查看实时数据更新。
 
-   ![11011006](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2168456361/p345940.png)
+4. 在 **总览** 区域单击右上方 **查看全部**，查看 **Linux 系统负载** 、 **CPU 使用率**、**IO 使用率**、**IO 队列长度**、**平均每秒 IO 次数**、**平均每次 IO 耗时**、**平均每秒 IO 数据量**、**网络吞吐率**、**内存** 和 **磁盘使用率** 信息。
 
-4. 在 **总览** 区域单击右上方 **查看全部**，查看 **Linux 系统负载** 、 **CPU 使用率**、**平均每秒 IO 次数**、**平均每次 IO 耗时**、**平均每秒 IO 数据量**、**网络吞吐率**、**内存** 和 **磁盘** 信息。
+   ![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/system-monitor.png)
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9972988061/p200026.png)
+5. 在 **OBProxy IP 数据** 区域，您可查看当前 OBProxy 集群中的各 OBProxy 节点的性能情况，单击 **列管理** 选择需要显示的指标信息。
 
-5. 在 **OBProxy IP 数据** 区域，您可查看各指标的最大值、最小值和平均值，单击 **列管理**，选择需要显示的指标信息。列信息包括：**Linux 系统负载**、**CPU 使用率**、**平均每秒 IO 次数**、**平均每次 IO 耗时**、**平均每秒 IO 数据量**、**网络吞吐率**、**内存** 和 **磁盘** 信息。
-
-   ![014](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2188808461/p201533.png)
+   ![014](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/obproxyIP%E6%95%B0%E6%8D%AE-1-1.png)
