--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/7.upgrade-obproxy.md
@@ -12,39 +12,32 @@ OBProxy 有了新的版本时，可以在 OCP 上升级单个/多个 OBProxy。
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **概览** 页面。
 
 4. 进行如下操作：
 
    * 在 **OBProxy 列表** 中，找到待升级的 OBProxy，在对应的 **操作** 列中，单击 **升级**，选择或上传升级版本包，单击 **确定**，可以升级单个 OBProxy。
 
-      ![重启单个OBServer](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204438.png)
+      ![升级单个 ODP](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/update-an-odp.png)
 
    * 在 **OBProxy 列表** 中，选择多个 OBProxy ，在列表右上方单击 **批量升级**，选择或上传升级版本包，单击 **确定**，可以升级多个 OBProxy。
 
-      ![批量升级](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0136929061/p204455.png)
+      ![批量升级](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/delete-odps.png)
 
 5. 在弹出框中选择 **升级版本**。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3139360261/p271762.png)
+   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%8D%87%E7%BA%A7%E5%8D%95%E4%B8%AAobproxy1.png)
 
-  <main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <ul>
-    <li>
-    <p>仅可选择高于当前最高版本的软件包。</p>
-    </li>
-    <li>
-    <p>仅可选择匹配当前主机硬件架构的软件包。</p>
-    </li>
-    </ul>
-  </main>
+    <p>升级到的软件包版本需高于当前 OBProxy 版本，且软件包硬件架构应与当前主机的硬件架构匹配。</p>
+   </main>
 
 6. 单击 **确定**，完成升级。
 
-   弹出如下对话框，可单击 **查看任务** 查看详细进展。**任务状态** 显示为 **完成**，即表示升级成功。
+   您可通过弹出框中的 **查看任务** 按钮，查看进度。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6695081461/p352532.png)
+   当该任务状态为 **完成** ，且集群 **概览** 页的 **OBProxy 列表** 中该 OBProxy 的状态为 **运行中** 时，则表示升级成功。
 
 ## 相关信息
 
