fix note format

--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -74,7 +74,7 @@
    | svr_port   | 服务器的端口。                        |
    | name       | 配置项名。                         |
    | data_type  | 配置项的数据类型，包括 `STRING`、`CAPACITY` 等。              |
-   | value      | 配置项的值。 <blockquote>**说明**  </br>由于在修改配置项值时，支持修改指定 Zone 或 Server 的配置项值，故不同 Zone 或 Server 对应的配置项的值可能不同。</blockquote>  |
+   | value      | 配置项的值。 <main id="notice" type='explain'><h4>说明</h4><p>由于在修改配置项值时，支持修改指定 Zone 或 Server 的配置项值，故不同 Zone 或 Server 对应的配置项的值可能不同。</p></main>  |
    | info       | 配置项的说明信息。           |
    | section    | 配置项所属的分类： <ul><li>`SSTABLE`：表示 SSTable 相关的配置项。</li> <li>`OBSERVER`：表示 OBServer 相关的配置项。</li>  <li>`ROOT_SERVICE`：表示 Root Service 相关的配置项。</li> <li>`TENANT`：表示租户相关的配置项。</li> <li>`TRANS`：表示事务相关的配置项。</li> <li>`LOAD_BALANCE`：表示负载均衡相关的配置项。</li>  <li>`DAILY_MERGE`：表示合并相关的配置项。</li> <li>`CLOG`：表示 Clog 相关的配置项。</li>   <li>`LOCATION_CACHE`：表示 Location Cache 相关的配置项。</li> <li>`CACHE`：表示缓存相关的配置项。</li>   <li>`RPC`：表示 RPC 相关的配置项。</li> <li>`OBPROXY`：表示 OBProxy 相关的配置项。</li></ul>    |
    | scope      | 配置项范围属性： <ul><li>`TENANT`：表示该配置项为租户级别的配置项</li> <li>`CLUSTER`：表示该配置项为集群级别的配置项</li></ul>         |
