--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-partitions-of-mysql-mode/2.create-a-partition-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-partitions-of-mysql-mode/2.create-a-partition-table-of-mysql-mode.md
@@ -112,13 +112,13 @@ CREATE TABLE table_name (column_name column_type[,column_name column_type])
     );
 ```
 
->**注意**
->
->当使用 List 分区时，需要遵循以下规则：
->
->* 分区表达式的结果必须是整型。
->
->* 分区表达式只能引用一列，不能有多列（即列向量）。
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<ul><p>当使用 List 分区时，需要遵循以下规则：</p>
+<li>分区表达式的结果必须是整型。</li>
+<li>分区表达式只能引用一列，不能有多列（即列向量）。</li>
+</ul>
+</main>
 
 ### 参数解释
 
