--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -36,13 +36,13 @@
 
 |       类型        |                     最大限制                      |
 |-----------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 单个 ODP 的连接数 | 由 ODP 的 `client_max_connections` 参数控制，默认为 8192。 <blokequote>**说明**  </br>您可以通过增加 ODP 节点数或者修改 `client_max_connections` 配置项值的方式来增大集群的连接总数限制。 </blokequote>|
+| 单个 ODP 的连接数 | 由 ODP 的 `client_max_connections` 参数控制，默认为 8192。 <main id="notice" type='explain'><h4>说明</h4><p>您可以通过增加 ODP 节点数或者修改 <code>client_max_connections</code> 配置项值的方式来增大集群的连接总数限制。</p></main>|
 
 ## 分区副本数限制
 
 |         类型         |           最大限制            |
 |--------------------|-------------------------------------------------------------------------------------|
-| 每个 OBServer 节点的分区副本数 | 无严格限制 </br>**说明**  </br>每个 OBServer 节点的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。 |
+| 每个 OBServer 节点的分区副本数 | 无严格限制 <main id="notice" type='explain'><h4>说明</h4><p>每个 OBServer 节点的分区副本数可根据租户内存大小来预估，1G 内存约支持约 2 万 tablet。</p></main> |
 
 ## 单个表的限制
 
