--- a/zh-CN/7.reference/6.api/6.hbaseapi/2.hbaseapi-storage-models.md
+++ b/zh-CN/7.reference/6.api/6.hbaseapi/2.hbaseapi-storage-models.md
@@ -5,7 +5,7 @@
 ## 前提条件
 
 已连接 OceanBase 数据库。
-您可使用 OBClient 或 MySQL 客户端登录 OceanBase，具体方法可参考 [通过 OBClient 连接 OceanBase 租户](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)。
+您可使用 OBClient 或 MySQL 客户端登录 OceanBase，具体方法可参考 [通过 OBClient 连接 OceanBase 租户](../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md) 和 [通过 MySQL 客户端连接 OceanBase 数据库](../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md)。
 
 ## 存储模型
 
@@ -113,4 +113,4 @@ PARTITION BY RANGE columns (K)
 
 ### 多 column family 支持
 
-与原生 HBase 在一个表中支持多列簇的不同，OceanBase 不支持多列簇。但可以通过建立上面章节描述的多个表（例如 `htable1$family1`，`htable1$family2` ）在客户端实现多 column family。对于上述使用方式，建议您把这些表放入同一个 OceanBase 数据库的 Table Group 中，详细操作，请参考 [如何创建 Table Group](../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md)，这样可以保证跨 column family 的操作没有跨机分布式事务。
+与原生 HBase 在一个表中支持多列簇的不同，OceanBase 不支持多列簇。但可以通过建立上面章节描述的多个表（例如 `htable1$family1`，`htable1$family2` ）在客户端实现多 column family。对于上述使用方式，建议您把这些表放入同一个 OceanBase 数据库的 Table Group 中，详细操作，请参考 [如何创建 Table Group](../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md)，这样可以保证跨 column family 的操作没有跨机分布式事务。
