--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/1.table-scan.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/1.table-scan.md
@@ -12,25 +12,27 @@ obclient> CREATE TABLE t1(c1 INT PRIMARY KEY, c2 INT, c3 INT, c4 INT,
 Query OK, 0 rows affected 
 
 Q1：
-obclient> EXPLAIN EXTENDED SELECT * FROM t1 WHERE c1 = 1\G
-*************************** 1. row ***************************
-Query Plan: 
-| ==================================
-|ID|OPERATOR |NAME|EST. ROWS|COST|
-----------------------------------
-|0 |TABLE GET|t1  |1        |53  |
-==================================
-Outputs & filters:
--------------------------------------
-  0 - output([t1.c1(0x7f22fbe69340)], [t1.c2(0x7f22fbe695c0)], [t1.c3(0x7f22fbe69840)], [t1.c4(0x7f22fbe69ac0)]), filter(nil),
-      access([t1.c1(0x7f22fbe69340)], [t1.c2(0x7f22fbe695c0)], [t1.c3(0x7f22fbe69840)], [t1.c4(0x7f22fbe69ac0)]), partitions(p0),
-      is_index_back=false,
-      range_key([t1.c1(0x7f22fbe69340)]), range[1 ; 1],
-      range_cond([t1.c1(0x7f22fbe69340) = 1(0x7f22fbe68cf0)])
+obclient> EXPLAIN SELECT * FROM t1 WHERE c1 = 1;
++---------------------------------------------------------------------------+
+| Query Plan                                                                |
++---------------------------------------------------------------------------+
+| =====================================================                     |
+| |ID|OPERATOR             |NAME|EST.ROWS|EST.TIME(us)|                     |
+| -----------------------------------------------------                     |
+| |0 | TABLE GET           |t1  |1       |53          |                     |
+| =====================================================                     |
+| Outputs & filters:                                                        |
+| -------------------------------------                                     |
+|   0 - output([t1.c1], [t1.c2], [t1.c3], [t1.c4]), filter(nil), rowset=256 |
+|       access([t1.c1], [t1.c2], [t1.c3], [t1.c4]), partitions(p0)          |
+|       is_index_back=false, is_global_index=false,                         |
+|       range_key([t1.c1]), range[1 ; 1],                                   |
+|       range_cond([t1.c1 = 1])                                             |
++---------------------------------------------------------------------------+
+
 
 Q2：
-obclient> EXPLAIN EXTENDED SELECT * FROM t1 WHERE c2 < 1 AND c3 < 1 AND
-         c4 < 1\G
+obclient> EXPLAIN SELECT * FROM t1 WHERE c2 < 1 AND c3 < 1 AND c4 < 1;
 *************************** 1. row ***************************
 Query Plan: 
 | ======================================
@@ -47,10 +49,27 @@ Outputs & filters:
       range_key([t1.c2(0x7f227decec40)], [t1.c3(0x7f227decf9b0)], [t1.c1(0x7f22fbd1e220)]), 
       range(NULL,MAX,MAX ; 1,MIN,MIN),
       range_cond([t1.c2(0x7f227decec40) < 1(0x7f227dece5f0)])
++------------------------------------------------------------------------------------------------+
+| Query Plan                                                                                     |
++------------------------------------------------------------------------------------------------+
+| =======================================================                                        |
+| |ID|OPERATOR             |NAME  |EST.ROWS|EST.TIME(us)|                                        |
+| -------------------------------------------------------                                        |
+| |0 |TABLE RANGE SCAN     |t1(k1)|100     |12422       |                                        |
+| =======================================================                                        |
+| Outputs & filters:                                                                             |
+| -------------------------------------                                                          |
+|   0 - output([t1.c1], [t1.c2], [t1.c3], [t1.c4]), filter(nil)                                  |
+|   1 - output([t1.c1], [t1.c2], [t1.c3], [t1.c4]), filter(nil)                                  |
+|   2 - output([t1.c1], [t1.c2], [t1.c3], [t1.c4]), filter([t1.c3 < 1], [t1.c4 < 1]), rowset=256 |
+|       access([t1.c1], [t1.c2], [t1.c3], [t1.c4]), partitions(p0)                               |
+|       is_index_back=true, is_global_index=false, filter_before_indexback[true,false],          |
+|       range_key([t1.c2], [t1.c3], [t1.c1]), range(NULL,MAX,MAX ; 1,MIN,MIN),                   |
+|       range_cond([t1.c2 < 1])                                                                  |
++------------------------------------------------------------------------------------------------+
 
 Q3:
-obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY 
-       HASH(c1) PARTITIONS 4;
+obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT) PARTITION BY HASH(c1) PARTITIONS 4;
 Query OK, 0 rows affected 
 obclient> CREATE INDEX i2 ON t2(c2) GLOBAL;
 Query OK, 0 rows affected 
