--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/10.MATERIAL.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/10.MATERIAL.md
@@ -13,9 +13,8 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE t2(c1 INT ,c2 INT ,c3 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT  /*+ORDERED USE_NL(T2)*/* FROM t1,t2 
-         WHERE t1.c1=t2.c1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT  /*+ORDERED USE_NL(T2)*/* FROM t1,t2 WHERE t1.c1=t2.c1;
+
 Query Plan: 
 ===========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST  |
