--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/11.SORT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/11.SORT.md
@@ -11,8 +11,7 @@ Query OK, 0 rows affected
 obclient> CREATE INDEX i1 ON t1(c1);
 Query OK, 0 rows affected
 
-obclient> EXPLAIN SELECT c1 FROM t1 ORDER BY c1 DESC, c2 ASC\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1 FROM t1 ORDER BY c1 DESC, c2 ASC;
 
 Query Plan: 
 ================================================
@@ -43,8 +42,8 @@ Outputs & filters:
 如果 `ORDER BY` 语句块后面还有 `LIMIT`（仅适用于 MySQL 模式）语句，优化器会进一步优化执行计划，生成 `TOP-N SORT`算子，即采用堆排序来选择 TOP-N 的数据，示例如下：
 
 ```sql
-obclient> EXPLAIN SELECT * FROM t1 WHERE c1 > 1 ORDER BY c1,c2 LIMIT 10\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1 WHERE c1 > 1 ORDER BY c1,c2 LIMIT 10;
+
 Query Plan: 
 ========================================
 |ID|OPERATOR    |NAME  |EST. ROWS|COST |
