--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/13.for-update.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/13.for-update.md
@@ -42,8 +42,8 @@ obclient> INSERT INTO t2 VALUES(3, 3);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT * FROM t1 WHERE c1 = 1 FOR UPDATE\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1 WHERE c1 = 1 FOR UPDATE;
+
 Query Plan:
 =====================================
 |ID|OPERATOR    |NAME|EST. ROWS|COST|
@@ -81,8 +81,8 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE t2 (d1 INT, d2 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM t1, t2 WHERE c1 = 1 AND c1 = d1 FOR UPDATE\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1, t2 WHERE c1 = 1 AND c1 = d1 FOR UPDATE;
+
 Query Plan:
 =====================================================
 |ID|OPERATOR                    |NAME|EST. ROWS|COST|
