--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/14.select-into.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/14.select-into.md
@@ -14,8 +14,8 @@ Query OK, 1 rows affected
 obclient> INSERT INTO t1 VALUES(2,2);
 Query OK, 1 rows affected 
 
-obclient> EXPLAIN SELECT COUNT(*), MAX(c1) INTO @a, @b FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT COUNT(*), MAX(c1) INTO @a, @b FROM t1;
+
 Query Plan:
 =========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST|
