--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/17.INTERSECT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/17.INTERSECT.md
@@ -19,8 +19,8 @@ obclient> INSERT INTO t1 VALUES(2,2);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT c1 FROM t1 INTERSECT SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1 FROM t1 INTERSECT SELECT c2 FROM t1;
+
 Query Plan:
 =================================================
 |ID|OPERATOR                |NAME|EST. ROWS|COST|
@@ -53,8 +53,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN SELECT c2 FROM t1 INTERSECT SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c2 FROM t1 INTERSECT SELECT c2 FROM t1;
+
 Query Plan:
 ================================================
 |ID|OPERATOR               |NAME|EST. ROWS|COST|
