--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/18.except-minus.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/18.except-minus.md
@@ -21,8 +21,8 @@ obclient> INSERT INTO t1 VALUES(2,2);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN /*+NO_USE_HASH_AGGREGATION*/ SELECT c1 FROM t1 MINUS SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN /*+NO_USE_HASH_AGGREGATION*/ SELECT c1 FROM t1 MINUS SELECT c2 FROM t1;
+
 Query Plan:
 ==============================================
 |ID|OPERATOR             |NAME|EST. ROWS|COST|
@@ -55,8 +55,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN SELECT c2 FROM t1 MINUS SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c2 FROM t1 MINUS SELECT c2 FROM t1;
+
 Query Plan:
 =============================================
 |ID|OPERATOR            |NAME|EST. ROWS|COST|
