--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/19.INSERT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/19.INSERT.md
@@ -40,8 +40,8 @@ obclient> CREATE INDEX IDX_t3_c2 ON t3 (c2) PARTITION BY HASH(c2) PARTITIONS 3;
 Query OK, 0 rows affected 
 
 Q1: 
-obclient> EXPLAIN INSERT INTO t1 VALUES (1, '100')\G;
-*************************** 1. row ***************************
+obclient> EXPLAIN INSERT INTO t1 VALUES (1, '100');
+
 Query Plan:
 ====================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -69,12 +69,12 @@ Outputs & filters:
 
 更多 `INSERT` 算子的示例如下：
 
-* Q2 查询将值（2, '200'）、（3, '300'）插入到表 `t1` 中。
+* Q2 查询将值 (2, '200')、(3, '300') 插入到表 `t1` 中。
 
   ```sql
   Q2: 
-  obclient> EXPLAIN INSERT INTO t1 VALUES (2, '200'),(3, '300')\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN INSERT INTO t1 VALUES (2, '200'),(3, '300');
+ 
   Query Plan:
   ====================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -95,8 +95,8 @@ Outputs & filters:
 
   ```sql
   Q3: 
-  obclient> EXPLAIN INSERT INTO t1 SELECT * FROM t3\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN INSERT INTO t1 SELECT * FROM t3;
+ 
   Query Plan:
   ====================================
   |0 |INSERT              |     |100000   |117862|
@@ -122,8 +122,8 @@ Outputs & filters:
 
   ```sql
   Q4: 
-  obclient> EXPLAIN INSERT INTO t2 VALUES (1, '100')\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN INSERT INTO t2 VALUES (1, '100');
+
   Query Plan:
   ====================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -147,8 +147,8 @@ Outputs & filters:
 
 ```sql
 Q5: 
-obclient> EXPLAIN INSERT INTO t2 VALUES (2, '200'),(3, '300')\G
-*************************** 1. row ***************************
+obclient> EXPLAIN INSERT INTO t2 VALUES (2, '200'),(3, '300');
+
 Query Plan:
 ===============================================
 |ID|OPERATOR              |NAME|EST. ROWS|COST|
@@ -173,8 +173,8 @@ Outputs & filters:
 
   ```sql
   Q6: 
-  obclient> EXPLAIN INSERT INTO t2 SELECT * FROM t3\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN INSERT INTO t2 SELECT * FROM t3;
+
   Query Plan:
   ==============================================
   |ID|OPERATOR          |NAME |EST. ROWS|COST |
@@ -198,9 +198,10 @@ Outputs & filters:
 
   ```sql
   Q7: 
-  obclient> EXPLAIN INSERT INTO t3 VALUES (1, '100')\G
-  *************************** 1. row ***************************
-  Query Plan: ===========================================
+  obclient> EXPLAIN INSERT INTO t3 VALUES (1, '100');
+
+  Query Plan: 
+  ===========================================
   |ID|OPERATOR          |NAME|EST. ROWS|COST|
   -------------------------------------------
   |0 |DISTRIBUTED INSERT|    |1        |20  |
