--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/20.DELETE.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/20.DELETE.md
@@ -41,8 +41,8 @@ Query OK, 0 rows affected
 obclient> CREATE INDEX IDX_t3_c2 ON t3 (c2) PARTITION BY HASH(c2) PARTITIONS 3;
 Query OK, 0 rows affected 
 Q1: 
-obclient> EXPLAIN DELETE FROM t1 WHERE c2 > '100'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN DELETE FROM t1 WHERE c2 > '100';
+
 Query Plan:
 ======================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST  |
@@ -76,8 +76,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN DELETE FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN DELETE FROM t1;
+
 Query Plan:
 ======================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST  |
@@ -94,8 +94,8 @@ Outputs & filters:
  
 
 Q3: 
-obclient> EXPLAIN DELETE FROM t2 WHERE c1 = 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN DELETE FROM t2 WHERE c1 = 1;
+
 Query Plan:
 ===================================
 |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -112,8 +112,8 @@ Outputs & filters:
  
 
 Q4: 
-obclient> EXPLAIN DELETE FROM t2 WHERE c2 > '100'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN DELETE FROM t2 WHERE c2 > '100';
+
 Query Plan:
 ===============================================
 
@@ -144,8 +144,8 @@ Outputs & filters:
 
 ```sql
 Q5: 
-obclient> EXPLAIN DELETE FROM t3 WHERE c2 > '100'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN DELETE FROM t3 WHERE c2 > '100';
+
 Query Plan:
 =================================================
 |ID|OPERATOR              |NAME|EST. ROWS|COST |
