--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/21.UPDATE.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/21.UPDATE.md
@@ -43,7 +43,7 @@ Query OK, 0 rows affected
 
 Q1: 
 obclient> EXPLAIN UPDATE t1 SET c2 = '200' WHERE c2 = '100';
-*************************** 1. row ***************************
+
 Query Plan:
 ======================================
 |ID|OPERATOR            |NAME|EST. ROWS|COST  |
@@ -83,8 +83,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN UPDATE t1 SET c2 = '200'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN UPDATE t1 SET c2 = '200';
+
 Query Plan:
 ======================================
 |ID|OPERATOR            |NAME|EST. ROWS|COST  |
@@ -106,8 +106,8 @@ Outputs & filters:
 
      
 Q3: 
-obclient> EXPLAIN UPDATE t2 SET t2.c2 = '150' WHERE t2.c1 = '100'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN UPDATE t2 SET t2.c2 = '150' WHERE t2.c1 = '100';
+
 Query Plan:
 ===================================
 |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -125,8 +125,8 @@ Outputs & filters:
       
 
 Q4: 
-obclient> EXPLAIN UPDATE t2 SET t2.c2 = RPAD(t2.c2, 10, '9')  WHERE t2.c2 = '100'\G
-*************************** 1. row ***************************
+obclient> EXPLAIN UPDATE t2 SET t2.c2 = RPAD(t2.c2, 10, '9')  WHERE t2.c2 = '100';
+
 Query Plan:
 ===============================================
 |ID|OPERATOR               |NAME    |EST. ROWS|COST   |
