--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/22.MERGE.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/22.MERGE.md
@@ -41,8 +41,8 @@ obclient> EXPLAIN MERGE INTO t1 USING src_tbl ON (t1.c1 = src_tbl.c1)
         WHEN MATCHED THEN 
         UPDATE SET t1.c2 = src_tbl.c2 WHERE src_tbl.c2 > '100'
         WHEN NOT MATCHED THEN 
-        INSERT (t1.c1, t1.c2)  VALUES (src_tbl.c1,src_tbl.c2) WHERE src_tbl.c1 > 10\G
-*************************** 1. row ***************************
+        INSERT (t1.c1, t1.c2)  VALUES (src_tbl.c1,src_tbl.c2) WHERE src_tbl.c1 > 10;
+
 Query Plan:
 ===============================================
 |ID|OPERATOR         |NAME   |EST. ROWS|COST  |
@@ -104,8 +104,8 @@ obclient> EXPLAIN MERGE INTO t2 USING SRC_TBL ON (t2.c1 = src_tbl.c1)
         UPDATE SET t2.c2 = SUBSTR(src_tbl.c2, 1, 5) 
         DELETE WHERE t2.c2 > '80000'
         WHEN NOT MATCHED THEN 
-        INSERT (t2.c1, t2.c2) VALUES (src_tbl.c1,src_tbl.c2)\G
-*************************** 1. row ***************************
+        INSERT (t2.c1, t2.c2) VALUES (src_tbl.c1,src_tbl.c2);
+
 Query Plan:
 ============================================================
 
