--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/23.EXCHANGE.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/23.EXCHANGE.md
@@ -14,8 +14,8 @@
 obclient> CREATE TABLE t (c1 INT, c2 INT) PARTITION BY HASH(c1) PARTITIONS 5;
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM t\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t;
+
 Query Plan:
 ==============================================
 |ID|OPERATOR           |NAME|EST. ROWS|COST  |
@@ -50,8 +50,8 @@ Outputs & filters:
 obclient> CREATE TABLE t (c1 INT, c2 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM t\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t;
+
 Query Plan:
 ===============================================
 |ID|OPERATOR            |NAME|EST. ROWS|COST  |
@@ -86,8 +86,8 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE s (c1 INT PRIMARY KEY, c2 INT) PARTITION BY HASH(c1) PARTITIONS 4;
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM s, t WHERE s.c1 = t.c1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM s, t WHERE s.c1 = t.c1;
+
 Query Plan:
  ===============================================================
 |ID|OPERATOR                       |NAME|EST. ROWS |COST      |
@@ -139,8 +139,8 @@ obclient> CREATE TABLE s (c1 INT, c2 INT) PARTITION BY HASH(c1) PARTITIONS 4;
 Query OK, 0 rows affected 
 
 obclient> EXPLAIN SELECT /*+PQ_DISTRIBUTE(@"SEL$1" ("TEST.S"@"SEL$1" ) HASH HASH), 
-             PARALLEL(2)*/ * FROM t, s WHERE t.c2 = s.c2\G
-*************************** 1. row ***************************
+             PARALLEL(2)*/ * FROM t, s WHERE t.c2 = s.c2;
+
 Query Plan:
 =================================================================
 |ID|OPERATOR                     |NAME    |EST. ROWS |COST      |
@@ -202,8 +202,8 @@ Query OK, 0 rows affected
 obclient> INSERT INTO s VALUES (1, 1), (2, 2), (3, 3), (4, 4);
 Query OK, 1 rows affected 
 
-obclient> EXPALIN SELECT  /*+PARALLEL(2) */ * FROM t, s WHERE t.c2 = s.c2\G
-*************************** 1. row ***************************
+obclient> EXPALIN SELECT  /*+PARALLEL(2) */ * FROM t, s WHERE t.c2 = s.c2;
+
 Query Plan:
 ======================================================================
 |ID|OPERATOR                          |NAME    |EST. ROWS |COST      |
