--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/3.JOIN.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/3.JOIN.md
@@ -6,7 +6,7 @@
 
 OceanBase 数据库支持的 `JOIN` 算子主要有 `NESTED LOOP JOIN (NLJ)`、`MERGE JOIN (MJ)` 和 `HASH JOIN (HJ)`。
 
-## NESTED LOOP JOIN (NLJ) 
+## NESTED LOOP JOIN (NLJ)
 
 如下示例中，Q1 和 Q2 查询使用 Hint 指定了查询使用 NLJ。其中，0 号算子是一个 NLJ 算子。这个算子存在两个子节点，分别是 1 号算子和 2 号算子，它的执行逻辑为：
 
@@ -27,8 +27,8 @@ obclient> CREATE TABLE t2 (d1 INT, d2 INT, PRIMARY KEY (d1));
 Query OK, 0 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c2 = d2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c2 = d2;
+
 Query Plan:
 ===========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST  |
@@ -53,8 +53,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1;
+
 Query Plan:
 | ==========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST |
@@ -86,7 +86,7 @@ Outputs & filters:
 
 ```sql
 Q3: 
-obclient> EXPLAIN SELECT t1.c2 + t2.d2 FROM t1, t2\G
+obclient> EXPLAIN SELECT t1.c2 + t2.d2 FROM t1, t2;
 *************************** 1. row ***************************
 Query Plan:
 | =====================================================
@@ -116,8 +116,8 @@ Outputs & filters:
 
 ```sql
 Q4: 
-obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c2 = d2 AND c1 + d1 > 10\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c2 = d2 AND c1 + d1 > 10;
+
 Query Plan:
 | ======================================
 |ID|OPERATOR    |NAME|EST. ROWS|COST |
@@ -144,8 +144,8 @@ Outputs & filters:
 
 ```sql
 Q5: 
-obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1;
+
 Query Plan:
 | =====================================
 |ID|OPERATOR    |NAME|EST. ROWS|COST|
@@ -185,9 +185,8 @@ Outputs & filters:
 
 ```sql
 Q6: 
-obclient> EXPLAIN SELECT /*+USE_HASH(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 
-      WHERE c1 = d1 AND c2 + d2 > 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_HASH(t1, t2)*/ t1.c2 + t2.d2 FROM t1, t2 WHERE c1 = d1 AND c2 + d2 > 1;
+
 Query Plan:
 | ====================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST|
