--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/4.COUNT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/4.COUNT.md
@@ -27,8 +27,8 @@ obclient> INSERT INTO t1 VALUES(5, 5);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT c1,ROWNUM FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1,ROWNUM FROM t1;
+
 Query Plan:
 | ====================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -69,8 +69,8 @@ obclient> SELECT c1,ROWNUM FROM t1;
 
 ```sql
 Q2:
-obclient> EXPLAIN SELECT 1 FROM DUAL WHERE ROWNUM < 2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT 1 FROM DUAL WHERE ROWNUM < 2;
+
 Query Plan:
 | ====================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST|
