--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/5.group-by.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/5.group-by.md
@@ -24,8 +24,8 @@ obclient> INSERT INTO t1 VALUES(3, 3);
 Query OK, 1 rows affected 
 
 Q1:
-obclient> EXPLAIN SELECT SUM(c1) FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT SUM(c1) FROM t1;
+
 Query Plan:
 | ========================================
 |ID|OPERATOR       |NAME|EST. ROWS|COST|
@@ -57,8 +57,8 @@ Outputs & filters:
 
 ```sql
 Q2: 
-obclient> EXPLAIN SELECT SUM(c2) FROM t1 GROUP BY c1 HAVING SUM(c2) > 2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT SUM(c2) FROM t1 GROUP BY c1 HAVING SUM(c2) > 2;
+
 Query Plan:
 | ======================================
 |ID|OPERATOR     |NAME|EST. ROWS|COST|
@@ -95,9 +95,8 @@ Outputs & filters:
 
 ```sql
 Q3: 
-obclient> EXPLAIN SELECT /*+NO_USE_HASH_AGGREGATION*/SUM(c2) FROM 
-       t1 GROUP BY c1 HAVING SUM(c2) > 2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+NO_USE_HASH_AGGREGATION*/SUM(c2) FROM t1 GROUP BY c1 HAVING SUM(c2) > 2;
+
 Query Plan:
 | =======================================
 |ID|OPERATOR      |NAME|EST. ROWS|COST|
