--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/7.subplan-filter.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/7.subplan-filter.md
@@ -15,9 +15,8 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE t2(c1 INT, c2 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT /*+NO_REWRITE*/c1 FROM t1 WHERE 
-        c2 > (SELECT MAX(c2) FROM t2)\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+NO_REWRITE*/c1 FROM t1 WHERE c2 > (SELECT MAX(c2) FROM t2);
+
 Query Plan: 
 | ===========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST  |
@@ -62,9 +61,8 @@ Outputs & filters:
 示例 2：`SUBPLAN FILTER` 算子驱动相关子查询计算
 
 ```sql
-obclient> EXPLAIN SELECT /*+NO_REWRITE*/c1 FROM t1 WHERE c2 > (SELECT 
-                MAX(c2) FROM t2 WHERE t1.c1=t2.c1)\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+NO_REWRITE*/c1 FROM t1 WHERE c2 > (SELECT MAX(c2) FROM t2 WHERE t1.c1=t2.c1);
+
 Query Plan: 
 | ===============================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST      |
