--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/8.DISTINCT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/8.DISTINCT.md
@@ -17,8 +17,8 @@ Query OK, 0 rows affected
 obclient> CREATE TABLE t2(c1 INT, c2 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT /*+USE_HASH_AGGREGATION*/ DISTINCT c1 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+USE_HASH_AGGREGATION*/ DISTINCT c1 FROM t1;
+
 Query Plan: 
 |=======================================
 |ID|OPERATOR     |NAME|EST. ROWS|COST |
@@ -50,8 +50,8 @@ Outputs & filters:
 示例 2：使用 Merge 算法执行 `DISTINCT` 运算
 
 ```sql
-obclient> EXPLAIN SELECT /*+NO_USE_HASH_AGGREGATION*/ DISTINCT c1 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+NO_USE_HASH_AGGREGATION*/ DISTINCT c1 FROM t1;
+
 Query Plan: 
 |=======================================
 |ID|OPERATOR      |NAME|EST. ROWS|COST|
