--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/12.LIMIT.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/12.LIMIT.md
@@ -40,8 +40,8 @@ obclient> INSERT INTO t2 VALUES(3, 3);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT t1.c1 FROM t1,t2 LIMIT 1 OFFSET 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT t1.c1 FROM t1,t2 LIMIT 1 OFFSET 1;
+
 Query Plan:
 =====================================================
 |ID|OPERATOR                   |NAME|EST. ROWS|COST |
@@ -63,8 +63,8 @@ Outputs & filters:
       access([t2.__pk_increment]), partitions(p0)
 
 Q2: 
-obclient> EXPLAIN SELECT * FROM t1 LIMIT 2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1 LIMIT 2;
+
 Query Plan:
 | ===================================
 |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -125,9 +125,8 @@ obclient> INSERT INTO t2 VALUES(3, 3);
 Query OK, 1 rows affected 
 
 Q3: 
-obclient> EXPLAIN SELECT * FROM t1,t2 OFFSET 1 ROWS 
-           FETCH NEXT 1 ROWS ONLY\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1,t2 OFFSET 1 ROWS FETCH NEXT 1 ROWS ONLY;
+
 Query Plan:
 | =====================================================
 |ID|OPERATOR                   |NAME|EST. ROWS|COST |
@@ -152,8 +151,8 @@ Outputs & filters:
       
       
  Q4: 
-obclient> EXPLAIN SELECT * FROM t1 FETCH NEXT 1 ROWS ONLY\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1 FETCH NEXT 1 ROWS ONLY;
+
 Query Plan:
  | ===================================
 |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -169,9 +168,8 @@ Outputs & filters:
  
  
  Q5: 
-obclient> EXPLAIN SELECT * FROM t2 ORDER BY c1 FETCH NEXT 10 
-            PERCENT ROW WITH TIES\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t2 ORDER BY c1 FETCH NEXT 10 PERCENT ROW WITH TIES;
+
 Query Plan:
 | =======================================
 |ID|OPERATOR    |NAME|EST. ROWS|COST  |
