--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/16.UNION.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/16.UNION.md
@@ -21,8 +21,8 @@ obclient> INSERT INTO t1 VALUES(2,2);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT c1 FROM t1 UNION ALL SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1 FROM t1 UNION ALL SELECT c2 FROM t1;
+
 Query Plan:
 ====================================
 |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -51,12 +51,12 @@ Outputs & filters:
 
 `MERGE UNION DISTINCT` 用于对结果集进行并集、去重后进行输出。
 
-如下示例中，Q2 对两个查询使用 `UNION DISTINCT` 进行联接， `c1` 列有可用排序，0 号算子生成 `MERGE UNION DISTINCT` 进行取并集、去重。由于 `c2` 列无可用排序，所以在 3 号算子上分配了 `SORT` 算子进行排序。算子执行时从左右子节点读取有序输入，进行合并得到有序输出并去重。
+如下示例中，Q2 对两个查询使用 `UNION DISTINCT` 进行联接，`c1` 列有可用排序，0 号算子生成 `MERGE UNION DISTINCT` 进行取并集、去重。由于 `c2` 列无可用排序，所以在 3 号算子上分配了 `SORT` 算子进行排序。算子执行时从左右子节点读取有序输入，进行合并得到有序输出并去重。
 
 ```sql
 Q2: 
-obclient> EXPLAIN SELECT c1 FROM t1 UNION SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1 FROM t1 UNION SELECT c2 FROM t1;
+
 Query Plan:
 =============================================
 |ID|OPERATOR            |NAME|EST. ROWS|COST|
@@ -86,8 +86,8 @@ Outputs & filters:
 
 ```sql
 Q3: 
-obclient> EXPLAIN SELECT c2 FROM t1 UNION SELECT c2 FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c2 FROM t1 UNION SELECT c2 FROM t1;
+
 Query Plan:
 ============================================
 |ID|OPERATOR           |NAME|EST. ROWS|COST|
