--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/6.window-function.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/6.window-function.md
@@ -20,8 +20,8 @@ obclient> INSERT INTO t1 VALUES(3, 3);
 Query OK, 1 rows affected 
 
 Q1: 
-obclient> EXPLAIN SELECT MAX(c1) OVER(PARTITION BY c1 ORDER BY c2) FROM t1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT MAX(c1) OVER(PARTITION BY c1 ORDER BY c2) FROM t1;
+
 Query Plan:
 | ========================================
 |ID|OPERATOR       |NAME|EST. ROWS|COST|
