--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/3.execution-plan-cache.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/3.execution-plan-cache.md
@@ -100,16 +100,11 @@ obclient>ALTER SYSTEM FLUSH PLAN CACHE [tenant_list] [global]
 
 执行计划相关视图包括：
 
-* `(G)V$OB_PLAN_CACHE_STAT`
-
-  记录每个计划缓存的状态，每个计划缓存在该视图中有一条记录。
+* `(G)V$OB_PLAN_CACHE_STAT` 展示当前租户在当前（所有）OBServer 节点的计划缓存整体的状态。
   
-* `(G)V$OB_PLAN_CACHE_PLAN_STAT`
-
-  记录计划缓存中所有执行计划的具体信息及每个计划总的执行统计信息。
+* `(G)V$OB_PLAN_CACHE_PLAN_STAT` 展示当前租户在当前（所有）OBServer 节点上的计划缓存中缓存的每一个缓存对象的状态。
   
-* `(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN`
+* `(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN` 展示缓存在当前（全部）OBServer 节点中的计划缓存中的物理执行计划。
 
-  记录某条 SQL 在计划缓存中的执行计划。
   
 有关视图的详细参数信息，请参考 [计划缓存相关视图](../4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md)。
